add slug to glass

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -317,6 +317,7 @@ collections:
       preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Slug", name: "slug", widget: "string" }
       - {
           label: "Intro",
           name: "intro",
