allow multiple tags on tips

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -246,6 +246,7 @@ collections:
         name: "tags"
         widget: "relation"
         collection: "tags"
+        multiple: true
         searchFields: ["title"]
         valueField: "slug"
         displayFields: ["title"]
