--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -54,7 +54,8 @@ collections:
             widget: relation
             collection: projects
             display_fields: ["title"]
-            value_field: "title"
+            value_field: "title",
+            search_fields: ["title"]
             multiple: true
             max: 3
             min: 2
