list not object

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -387,7 +387,7 @@ collections:
             }
       - label: Frequently asked questions
         name: faqs
-        widget: object
+        widget: list
         fields:
           - { label: "Summary", name: "summary", widget: "string" }
           - { label: "Details", name: "details", widget: "markdown" }
